--- a/notebooks/analysis3.ipynb
+++ b/notebooks/analysis3.ipynb
@@ -13,15 +13,457 @@
    "source": [
     "## Research question/interests\n",
     "\n",
-    "Briefly describe your research question or interests here."
+    "I am interested in exploring trends in the global availability of clean energy. Along with exploring how clean energy availability has changed, I specifically want to analyze the adoption of individual clean energy sources. What is the most popular source of clean energy globally? What specific energy sources can be differentiated by GDP? Who actually has access to each clean energy source? Are there discrepancies between the production and consumption of each clean energy source? In analyzing this data and answering these questions, I am also excited to gain a better understanding of the world's energy use, as well as its progress in renewable energy adoption. By the end of this project, I will have built a dashboard to more easily visualize these questions I have set out to answer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>year</th>\n",
+       "      <th>iso_code</th>\n",
+       "      <th>population</th>\n",
+       "      <th>gdp</th>\n",
+       "      <th>biofuel_cons_change_pct</th>\n",
+       "      <th>biofuel_cons_change_twh</th>\n",
+       "      <th>biofuel_cons_per_capita</th>\n",
+       "      <th>biofuel_consumption</th>\n",
+       "      <th>biofuel_elec_per_capita</th>\n",
+       "      <th>...</th>\n",
+       "      <th>solar_share_elec</th>\n",
+       "      <th>solar_share_energy</th>\n",
+       "      <th>wind_cons_change_pct</th>\n",
+       "      <th>wind_cons_change_twh</th>\n",
+       "      <th>wind_consumption</th>\n",
+       "      <th>wind_elec_per_capita</th>\n",
+       "      <th>wind_electricity</th>\n",
+       "      <th>wind_energy_per_capita</th>\n",
+       "      <th>wind_share_elec</th>\n",
+       "      <th>wind_share_energy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>1900</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>4832414.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>1901</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>4879685.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>1902</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>4935122.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>1903</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>4998861.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>1904</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>5063419.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22338</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>14236599.0</td>\n",
+       "      <td>2.194784e+10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>22.477</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.137</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22339</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>14438812.0</td>\n",
+       "      <td>2.271535e+10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>27.011</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.110</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22340</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>14645473.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>25.947</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.088</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22341</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>14862927.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>24.221</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.090</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22342</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>15092171.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>22343 rows × 128 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           country  year iso_code  population           gdp  \\\n",
+       "0      Afghanistan  1900      AFG   4832414.0           NaN   \n",
+       "1      Afghanistan  1901      AFG   4879685.0           NaN   \n",
+       "2      Afghanistan  1902      AFG   4935122.0           NaN   \n",
+       "3      Afghanistan  1903      AFG   4998861.0           NaN   \n",
+       "4      Afghanistan  1904      AFG   5063419.0           NaN   \n",
+       "...            ...   ...      ...         ...           ...   \n",
+       "22338     Zimbabwe  2017      ZWE  14236599.0  2.194784e+10   \n",
+       "22339     Zimbabwe  2018      ZWE  14438812.0  2.271535e+10   \n",
+       "22340     Zimbabwe  2019      ZWE  14645473.0           NaN   \n",
+       "22341     Zimbabwe  2020      ZWE  14862927.0           NaN   \n",
+       "22342     Zimbabwe  2021      ZWE  15092171.0           NaN   \n",
+       "\n",
+       "       biofuel_cons_change_pct  biofuel_cons_change_twh  \\\n",
+       "0                          NaN                      NaN   \n",
+       "1                          NaN                      NaN   \n",
+       "2                          NaN                      NaN   \n",
+       "3                          NaN                      NaN   \n",
+       "4                          NaN                      NaN   \n",
+       "...                        ...                      ...   \n",
+       "22338                      NaN                      NaN   \n",
+       "22339                      NaN                      NaN   \n",
+       "22340                      NaN                      NaN   \n",
+       "22341                      NaN                      NaN   \n",
+       "22342                      NaN                      NaN   \n",
+       "\n",
+       "       biofuel_cons_per_capita  biofuel_consumption  biofuel_elec_per_capita  \\\n",
+       "0                          NaN                  NaN                      NaN   \n",
+       "1                          NaN                  NaN                      NaN   \n",
+       "2                          NaN                  NaN                      NaN   \n",
+       "3                          NaN                  NaN                      NaN   \n",
+       "4                          NaN                  NaN                      NaN   \n",
+       "...                        ...                  ...                      ...   \n",
+       "22338                      NaN                  NaN                   22.477   \n",
+       "22339                      NaN                  NaN                   27.011   \n",
+       "22340                      NaN                  NaN                   25.947   \n",
+       "22341                      NaN                  NaN                   24.221   \n",
+       "22342                      NaN                  NaN                      NaN   \n",
+       "\n",
+       "       ...  solar_share_elec  solar_share_energy  wind_cons_change_pct  \\\n",
+       "0      ...               NaN                 NaN                   NaN   \n",
+       "1      ...               NaN                 NaN                   NaN   \n",
+       "2      ...               NaN                 NaN                   NaN   \n",
+       "3      ...               NaN                 NaN                   NaN   \n",
+       "4      ...               NaN                 NaN                   NaN   \n",
+       "...    ...               ...                 ...                   ...   \n",
+       "22338  ...             0.137                 NaN                   NaN   \n",
+       "22339  ...             0.110                 NaN                   NaN   \n",
+       "22340  ...             0.088                 NaN                   NaN   \n",
+       "22341  ...             0.090                 NaN                   NaN   \n",
+       "22342  ...               NaN                 NaN                   NaN   \n",
+       "\n",
+       "       wind_cons_change_twh  wind_consumption  wind_elec_per_capita  \\\n",
+       "0                       NaN               NaN                   NaN   \n",
+       "1                       NaN               NaN                   NaN   \n",
+       "2                       NaN               NaN                   NaN   \n",
+       "3                       NaN               NaN                   NaN   \n",
+       "4                       NaN               NaN                   NaN   \n",
+       "...                     ...               ...                   ...   \n",
+       "22338                   NaN               NaN                   0.0   \n",
+       "22339                   NaN               NaN                   0.0   \n",
+       "22340                   NaN               NaN                   0.0   \n",
+       "22341                   NaN               NaN                   0.0   \n",
+       "22342                   NaN               NaN                   NaN   \n",
+       "\n",
+       "       wind_electricity  wind_energy_per_capita  wind_share_elec  \\\n",
+       "0                   NaN                     NaN              NaN   \n",
+       "1                   NaN                     NaN              NaN   \n",
+       "2                   NaN                     NaN              NaN   \n",
+       "3                   NaN                     NaN              NaN   \n",
+       "4                   NaN                     NaN              NaN   \n",
+       "...                 ...                     ...              ...   \n",
+       "22338               0.0                     NaN              0.0   \n",
+       "22339               0.0                     NaN              0.0   \n",
+       "22340               0.0                     NaN              0.0   \n",
+       "22341               0.0                     NaN              0.0   \n",
+       "22342               NaN                     NaN              NaN   \n",
+       "\n",
+       "       wind_share_energy  \n",
+       "0                    NaN  \n",
+       "1                    NaN  \n",
+       "2                    NaN  \n",
+       "3                    NaN  \n",
+       "4                    NaN  \n",
+       "...                  ...  \n",
+       "22338                NaN  \n",
+       "22339                NaN  \n",
+       "22340                NaN  \n",
+       "22341                NaN  \n",
+       "22342                NaN  \n",
+       "\n",
+       "[22343 rows x 128 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "newData = pd.read_csv('https://raw.githubusercontent.com/ubco-W2022T1-cosc301/project-group02/main/data/raw/owid-energy-data.csv?token=GHSAT0AAAAAABZV4KHGV5E6NXW6LUTWQBRGY2IP4NA')\n",
+    "newData"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.7 64-bit",
+   "display_name": "Python 3.10.8 64-bit",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
